# Network_status_monitoring

./: Cargo.toml  README.md  config.yml  install.bat  install.sh
.github/workflows/: release.yml
scripts/: install-linux.sh  install-windows.bat
src/: main.rs
