[package]
name = "network_status_monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
if-addrs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "fs"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
